--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=santander
 
 # Configuração do Banco de Dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/cep_db
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://mysql-db:3306/cep_db
+spring.datasource.username=root 
 spring.datasource.password=KNyulio123!
 
 # Dialeto do MySQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Outras configurações do Hibernate
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.data=DEBUG
+
